--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "dev": "node --env-file=.env --watch-path=./src ./src/app.js",
-	"setup":"node --env-file=.env ./src/setup.js",
+    "setup": "node --env-file=.env ./src/setup.js",
     "start": "node --env-file=.env ./src/app.js",
     "test": "cross-env NODE_OPTIONS='--experimental-vm-modules' NODE_NO_WARNINGS=1 jest ./*.test.js",
     "test:coverage": "cross-env NODE_OPTIONS='--experimental-vm-modules' NODE_NO_WARNINGS=1 jest ./*.test.js --coverage",
@@ -38,9 +38,11 @@
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-session": "^1.18.0",
+    "express-validator": "^7.0.1",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
-    "pg": "^8.11.3"
+    "pg": "^8.11.3",
+    "xss": "^1.0.14"
   },
   "jest": {
     "collectCoverageFrom": [
